# image-categorizer-tauri

./: .gitignore  package-lock.json  package.json
src/: api.js  index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chunker.rs  lib.rs  main.rs  nsfw.rs  ocr.rs  thumbnails.rs  vision.rs
