[package]
name = "image-categorizer-tauri"
version = "1.0.0"
description = "Base app for virtually categorizing images by filename without moving them"
authors = ["slaur"]
edition = "2021"

[lib]
name = "image_categorizer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
regex = "1"
