[package]
name = "image-categorizer-tauri"
version = "1.0.0"
description = "Base app for virtually categorizing images by filename without moving them"
authors = ["slaur"]
edition = "2021"

[lib]
name = "image_categorizer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
regex = "1"
windows = { version = "0.62.2", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Storage", "Foundation", "Foundation_Collections", "Win32_System_WinRT", "Win32_Foundation", "Win32_System_Threading"] }
windows-future = "0.3.2"
windows-core = "0.62.2"
rayon = "1.12.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp", "tiff"] }
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
ndarray = "0.17"
ureq = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
